--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "dependencies": {
-    "expo": "^40.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^2.0.1"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0"
-  },
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo web",
-    "eject": "expo eject"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@react-native-community/datetimepicker": "^2.3.2",
+		"@react-native-community/netinfo": "^5.8.0",
+		"expo": "~37.0.0",
+		"expo-asset": "~8.0.0",
+		"expo-calendar": "~8.0.0",
+		"expo-image-manipulator": "~8.0.0",
+		"expo-image-picker": "~8.0.1",
+		"expo-mail-composer": "~8.0.0",
+		"expo-permissions": "~8.0.0",
+		"expo-secure-store": "~8.0.0",
+		"react": "~16.9.0",
+		"react-devtools": "^3.6.3",
+		"react-dom": "~16.9.0",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+		"react-native-animatable": "1.2.4",
+		"react-native-appearance": "^0.3.3",
+		"react-native-datepicker": "1.7.2",
+		"react-native-elements": "^1.0.0-beta8",
+		"react-native-swipeout": "2.3.3",
+		"react-native-web": "~0.11.7",
+		"react-navigation": "2.0.1",
+		"react-redux": "5.0.7",
+		"redux": "4.0.0",
+		"redux-logger": "3.0.6",
+		"redux-persist": "5.9.1",
+		"redux-thunk": "2.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.0.0",
+		"babel-preset-expo": "~8.0.0"
+	},
+	"private": true
 }
