--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 	},
 	"dependencies": {
 		"@react-native-community/datetimepicker": "^2.3.2",
+		"@react-native-community/masked-view": "^0.1.10",
 		"@react-native-community/netinfo": "^5.8.0",
+		"@react-navigation/drawer": "^5.11.5",
+		"@react-navigation/native": "^5.9.0",
+		"@react-navigation/stack": "^5.13.0",
 		"expo": "~37.0.0",
 		"expo-asset": "~8.0.0",
 		"expo-calendar": "~8.0.0",
@@ -26,6 +30,10 @@
 		"react-native-appearance": "^0.3.3",
 		"react-native-datepicker": "1.7.2",
 		"react-native-elements": "^1.0.0-beta8",
+		"react-native-gesture-handler": "^1.9.0",
+		"react-native-reanimated": "^1.13.2",
+		"react-native-safe-area-context": "^3.1.9",
+		"react-native-screens": "^2.16.1",
 		"react-native-swipeout": "2.3.3",
 		"react-native-web": "~0.11.7",
 		"react-navigation": "2.0.1",
